[package]
name = "netsblox-stateflow"
version = "0.1.6"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/netsblox-stateflow"
documentation = "https://docs.rs/netsblox-stateflow"
description = "A crate for extracting state machines from NetsBlox code."

[dependencies]
netsblox-ast = { version = "=0.5.11", default-features = false }
graphviz-rust = { version = "0.9.0", default-features = false }
