[package]
name = "netsblox-stateflow"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/netsblox-stateflow"
documentation = "https://docs.rs/netsblox-stateflow"
description = "A crate for extracting state machines from NetsBlox code."

[dependencies]
netsblox-ast = { version = "=0.5.12", default-features = false }
graphviz-rust = { version = "0.9.3", default-features = false }
clap = { version = "4.5.21", features = ["derive"] }

[dev-dependencies]
itertools = "0.13.0"
